Fixed issues for ElasticsearchCluster, LazyPropertyList, and LazyPropertyMap